added new DJs section

--- a/views/artists.phtml
+++ b/views/artists.phtml
@@ -1,7 +1,7 @@
 <?= ViewLoader::load('breadcrumb', array('items' => $breadcrumb)) ?>
 <div class="container">
     <div class="hero-unit">
-        <h1>Artist overview</h1>
+        <h1><?= $headline ?></h1>
     </div>
 	<div style="height:20px;"></div>
 	<ul class="thumbnails">
