--- a/views/404.phtml
+++ b/views/404.phtml
@@ -1,13 +1,14 @@
 <div class="container">
     <div class="hero-unit">
-        <h1>something went wrong...</h1>
         <? if (true === $displayException): ?>
-        	<p><strong>EXCEPTION: <?= $exception->getMessage() ?></strong></p>
+            <h1>EXCEPTION</h1>
+        	<p><strong><?= $exception->getMessage() ?></strong></p>
         	<? foreach ($exception->getTrace() as $step): ?>
-        	<span>Stack Trace</span>
+        	<span style="color: #000; font-weight: bold; font-size: 13px; font-family: sans;">Stack Trace:</span>
         	<p style="font-size: 13px; font-family: sans;"><?= $step['file'] ?>:<?= $step['line'] ?> - <b><?= $step['class'] ?><?= $step['type'] ?><?= $step['function'] ?>()</b></p>
         	<? endforeach ?>
     	<? else: ?>
+            <h1>something went wrong...</h1>
         	<p><strong>404</strong> - We're sorry but we can not find any content at '<?= $route ?>'.</p>
         <? endif ?>
     </div>
