--- a/views/home.phtml
+++ b/views/home.phtml
@@ -13,10 +13,18 @@
 <?= ViewLoader::load('breadcrumb', array('items' => array((object)array('active' => true, 'title' => 'Home')))) ?>
 <div class="container" style="height: 330px;">
 	<div class="row">
-		<div class="span2"></div>
-		<div class="span8">
-			<div class="box_skitter box_skitter_large">
+		<div class="span9">
+			<div class="box_skitter box_skitter_large" style="margin-left: 10px;">
 				<ul>
+					<li>
+						<img src="/img/releases/3886inlove-800x300.jpg">
+						<div class="label_text">
+							<p>Official Ruhr-in-Love Afterparty</p>
+							<div>
+								Thirtyeight Eightysix Labelnight #3 <a href="https://www.facebook.com/events/612196595516881" target="_blank">on Facebook</a>
+							</div>
+						</div>
+					</li>
 					<li>
 						<img src="/img/releases/zwielicht-shadowplay-800x300.jpg">
 						<div class="label_text">
@@ -77,7 +85,11 @@
 				</ul>
 			</div>
 		</div>
-		<div class="span2"></div>
+		<div class="span3">
+			<div style="height: 330px;">
+				<a href="/bookings" data-method="async"><img src="/img/bookings.jpg" border="0">
+			</div>
+		</div>
 	</div>
 </div>
 
